# odict

./: .appveyor.yml  .bazelrc  .buckconfig  .dockerignore  .gitattributes  .gitignore  .goreleaser.yaml  .mise.toml  .release-please-manifest.json  .rumdl.toml  .taplo.toml  .tool-versions  .travis.yml  .yarnrc.yml  AGENTS.md  BUCK  BUILD  BUILD.bazel  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CNAME  Cargo.toml  DEFS  Dockerfile  LICENSE  Makefile  README.md  WORKSPACE  abstract.dvi  abstract.fdb_latexmk  abstract.fls  abstract.tex  bazel-bin  bazel-genfiles  bazel-odict  bazel-out  bazel-testlogs  build.py  build.sh  (+49 more)
bindings/node/: .gitignore  Cargo.toml  browser.js  index.d.ts  justfile  node.wasi-browser.js  node.wasi.cjs  package.json  pnpm-lock.yaml  tasks.toml  wasi-worker-browser.mjs
bindings/python/: Cargo.toml  build.rs  justfile  pyproject.toml  requirements.txt  tasks.toml  uniffi.toml
bridge/: BUILD.bazel  odict-bridging-lib.go
cli/: BUILD.bazel  CHANGELOG.md  Cargo.toml  alias.go  app.go  compile.go  config.go  dictionaries.go  dump.go  go.mod  go.sum  index.go  ipc.go  justfile  lexicon.go  lookup.go  merge.go  odict.go  odict_test.go  package.json  print.go  search.go  serve.go  server.go  service.go  service_generated.go  split.go  t.go  tasks.toml  utils.go  validate.go
cli/src/: browse.rs  cli.rs  compile.rs  consts.rs  context.rs  download.rs  dump.rs  enums.rs  index.rs  info.rs  lexicon.rs  lib.rs  load.rs  lookup.rs  main.rs  merge.rs  new.rs  pprint.rs  print.rs  ranking.rs  search.rs  split.rs  tokenize.rs  utils.rs
cli/wix/: main.wxs
crates/cli/: CHANGELOG.md  Cargo.toml  mise.toml
crates/lib/: CHANGELOG.md  Cargo.toml  mise.toml
ffi/: Cargo.toml  build.rs  justfile
ffi/src/: lib.rs
go/: BUILD.bazel  DictionaryDefinitionGroup.go  DictionaryEntry.go  DictionaryEtymology.go  DictionaryPartOfSpeech.go  DictionaryUsage.go  DumpDictionary.go  IndexDictionary.go  LoadDictionary.go  MergeDictionary.go  SearchDictionary.go  WriteDictionary.go  cleanup.go  compile.go  converters.go  definition.go  dictionary.go  doc.go  dump.go  dump_dictionary.go  dump_test.go  entry.go  etymology.go  go.work.sum  group.go  index.go  index_dictionary.go  index_test.go  justfile  lexicon.go  lexicon_test.go  load.go  load_dictionary.go  lookup.go  lookup_test.go  merge.go  merge_dictionary.go  merge_test.go  pos.go  read.go  (+16 more)
go/.schema/: Dictionary.go  Entry.go  Group.go
go/cli/: compile.go  dump.go  enums_generated.go  go.mod  go.sum  lookup.go
go/models/: dictionary.go  entry.go  etymology.go  group.go  pos.go  usage.go
go/schema/: Entry.go  Etymology.go  POS.go  Usage.go  schema_generated.go
go/wasm/: CHANGELOG.md  go.mod  justfile  package-lock.json  package.json
go/xsd/: go.mod  justfile
lib/: CHANGELOG.md  Cargo.toml  build.rs  go.mod  go.sum  justfile  lib.go  odict.udl  tasks.toml
lib/benches/: helpers.rs  lib.rs
lib/config/: aliases.go  aliases_test.go  config.go  dictionaries.go  dictionaries_test.go  go.mod  go.sum
lib/core/: cleanup.go  compile.go  compile_test.go  converters.go  go.mod  go.sum  lexicon.go  lexicon_test.go  lookup.go  lookup_test.go  merge.go  merge_test.go  read.go  read_test.go  schema_generated.go  split.go  split_test.go  version.go  write.go  write_test.go
lib/dump/: convert.go  dump.go  dump_test.go  go.mod  go.sum  sql.go  types.go
lib/search/: go.mod  go.sum  index.go  index_test.go  search.go  search_test.go
lib/server/: cache.go  go.mod  go.sum  lookup.go  lookup_test.go  search.go  search_test.go  serve.go
lib/sql/: definitions.go  dictionaries.go  entries.go  etymologies.go  examples.go  go.mod  go.sum  groups.go  notes.go  senses.go  sql.go  sql_test.go
lib/src/: alias.rs  case.rs  compress.rs  compression.rs  config.rs  err.rs  error.rs  ext.rs  fs.rs  fuzzy.rs  lib.rs  load.rs  lz4.rs  md.rs  odict.rs  odict.udl  remote.rs  se.rs  tokenize.rs  utils.rs  xml.rs
lib/test/: cleanup.go  go.mod  go.sum
lib/tests/: alias.rs  dictionary_load.rs  dump.rs  find.rs  form.rs  helpers.rs  index.rs  io.rs  lexicon.rs  load.rs  lookup.rs  md.rs  merge.rs  pos.rs  preview.rs  pronunciation.rs  rank.rs  resolve.rs  search.rs  split.rs  sql.rs  tags.rs  tokenize.rs  translation.rs
lib/types/: definition.go  dictionary.go  entry.go  etymology.go  go.mod  go.sum  group.go  mdstring.go  mdstring_test.go  note.go  pos.go  schema_generated.go  sense.go  types.go  usage.go  utils.go
lib/utils/: bytes.go  convert.go  crypto.go  error.go  go.mod  go.sum  map.go  markdown.go  markdown_test.go  serialization.go  utils.go
lib/validator/: go.mod  go.sum  odict.xsd  validator.go  validator_test.go
node/: .gitignore  .prettierignore  .taplo.toml  CHANGELOG.md  Cargo.toml  browser.js  index.d.ts  index.html  index.js  jest.config.cjs  justfile  mise.toml  node.darwin-arm64.node  node.node  node.wasi-browser.js  node.wasi.cjs  package-lock.json  package.json  pnpm-lock.yaml  tasks.toml  tsconfig.json  vite.config.js
node/__test__/: dictionary.spec.ts  dictionary.spec.ts.md  dictionary.spec.ts.snap  forms.spec.ts  pronunciation.spec.ts
node/benchmark/: bench.ts
node/src/: browser.rs  constants.rs  dictionary.rs  lib.rs  node.rs  shared.rs  types.rs  utils.rs
node/test/: package.json
node/tests/: dictionary.spec.ts  forms.spec.ts  pronunciation.spec.ts
python/: BUILD.bazel  CHANGELOG.md  Cargo.toml  _odict.cpython-39-darwin.h  justfile  mise.toml  odict.py  odict_tests.py  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.toml  test_odict.py  uniffi.toml
python/odict/: BUILD.bazel  odict.py  test_odict.py
schema/: BUILD.bazel  Dictionary.cs  Dictionary.go  Dictionary.java  Entry.cs  Entry.go  Entry.java  Etymology.cs  Etymology.go  Etymology.java  Group.cs  Group.go  Group.java  POS.cs  POS.go  POS.java  Usage.cs  Usage.go  Usage.java  schema.fbs
shared/: BUILD.bazel  odict.go
wasm/: .prettierrc.json  CHANGELOG.md  Cargo.toml  demo.html  index.html  index.ts  jest.config.cjs  justfile  main.go  package-lock.json  package.json  tasks.toml  tsconfig.json  vite.config.js
wasm/src/: lib.rs  (+11 more)
(+868 files in other folders)
