load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/TheOpenDictionary/odict
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=bazel/odict_extra_deps.bzl%odict_extra_deps",
        "-prune",
    ],
    command = "update-repos",
)

test_suite(
    name = "all",
    tests = [
        "//cli:tests",
        "//java:tests",
        "//python:tests",
    ],
)
