load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/TheOpenDictionary/odict
gazelle(name = "gazelle")

gazelle(
    name = "update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
    ],
    command = "update-repos",
)

test_suite(
    name = "all",
    tests = [
        "//cli:tests",
        "//java:tests",
        "//python:tests",
    ],
)
