[workspace]
resolver = "2"
members = ["cli", "lib", "python", "node"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[profile.dev.package]
insta.opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.dev.package.backtrace]
opt-level = 3
