[workspace]
resolver = "2"
members = ["cli", "wasm", "lib", "python", "node"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"

[profile.dev.package]
insta.opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
serde-wasm-bindgen = "0.6.0"
