[workspace]
resolver = "2"
members = ["cli", "lib", "python", "node", "private"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
opt-level = 3

[profile.dev.package]
insta.opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
structural-convert = "0.13.0"
