[tool.poetry]
name = "odict"
version = "0.1.0"
description = ""
authors = ["Tyler Nickerson <nickersoft@gmail.com>"]
packages = [{include="python", from="."}]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "go", "make", "setuptools"]
build-backend = "poetry.core.masonry.api"
