[tool.poetry]
name = "theopendictionary"
version = "0.0.3"
description = ""
authors = ["Tyler Nickerson <nickersoft@gmail.com>"]
packages = [{include="odict", from="."}]
include = ["go", "lib", "schema", "go.mod", "go.sum", "Makefile"]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"