[package]
name = "odict-cli"
version = "2.9.1"
edition = "2021"
description = "Lightning-fast dictionary file format and toolchain"
homepage = "https://odict.org"
repository = "https://github.com/TheOpenDictionary/odict"

[[bin]]
name = "odict"
path = "src/main.rs"

[dependencies]
odict = { path = "../lib", features = [
  "sql",
  "search",
  "download",
  "alias",
  "html",
  "tokenize",
] }
clap = { version = "4.5.45", features = ["derive", "cargo"] }
console = "0.16.0"
indicatif = "0.18.0"
pulldown-cmark = "0.13.0"
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
derive_more = { version = "2", features = ["display", "error"] }
num-format = "0.4.4"
anyhow = "1.0.99"
lru = "0.16.0"
tokio = { version = "1.47", features = ["full"] }
