[package]
authors = ["Tyler Nickerson"]
description = "Lightning-fast dictionary file format and toolchain"
edition = "2021"
homepage = "https://odict.org"
name = "odict-cli"
repository = "https://github.com/TheOpenDictionary/odict"
version = "3.3.0"

[package.metadata.wix]
eula = false
license = false
path-guid = "679C0F53-2DA0-4E10-92B8-5B447190BA3D"
upgrade-guid = "1D09FCDB-8615-4B4C-A350-5CD4DAF45B57"

[[bin]]
name = "odict"
path = "src/main.rs"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
console = "0.16.3"
derive_more = { version = "2", features = ["display", "error"] }
env_logger = "0.11.10"
indicatif = "0.18.4"
internal = { path = "../crates/internal" }
lru = "0.18.0"
num-format = "0.4.4"
odict = { path = "../crates/odict", features = [
  "sql",
  "search",
  "http",
  "alias",
  "html",
  "tokenize",
] }
pulldown-cmark = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52", features = ["full"] }
