[package]
name = "poopy"
version = "0.1.0"
edition = "2021"

[dependencies]
uniffi.workspace = true
odict = { path = "../lib", features = [
  "config",
  "charabia",
  "sql",
  "search",
  "json",
] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }

[lib]
name = "ffi"
crate-type = ["cdylib", "staticlib", "lib"]
