load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go",
    srcs = [
        "dictionary.go",
        "doc.go",
        "dump.go",
        "entry.go",
        "etymology.go",
        "group.go",
        "index.go",
        "merge.go",
        "pos.go",
        "read.go",
        "search.go",
        "usage.go",
        "utils.go",
        "write.go",
    ],
    importpath = "github.com/TheOpenDictionary/odict/go",
    visibility = ["//visibility:public"],
    deps = [
        "//schema/go",
        "@com_github_blevesearch_bleve_index_api//:go_default_library",
        "@com_github_blevesearch_bleve_v2//:go_default_library",
        "@com_github_blevesearch_bleve_v2//document:go_default_library",
        "@com_github_blevesearch_bleve_v2//index/scorch:go_default_library",
        "@com_github_blevesearch_bleve_v2//search/query:go_default_library",
        "@com_github_golang_snappy//:go_default_library",
        "@com_github_google_flatbuffers//go:go_default_library",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_imdario_mergo//:go_default_library",
        "@com_github_schollz_progressbar_v3//:go_default_library",
    ],
)
