load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go",
    srcs = [
        "dictionary.go",
        "doc.go",
        "dump.go",
        "entry.go",
        "etymology.go",
        "group.go",
        "index.go",
        "merge.go",
        "pos.go",
        "read.go",
        "search.go",
        "usage.go",
        "utils.go",
        "write.go",
    ],
    importpath = "github.com/TheOpenDictionary/odict/go",
    visibility = ["//visibility:public"],
    deps = [
        "//schema/go",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
        "@com_github_blevesearch_bleve_v2//:bleve",
        "@com_github_blevesearch_bleve_v2//document",
        "@com_github_blevesearch_bleve_v2//index/scorch",
        "@com_github_blevesearch_bleve_v2//search/query",
        "@com_github_golang_snappy//:snappy",
        "@com_github_google_flatbuffers//go:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@com_github_imdario_mergo//:mergo",
        "@com_github_schollz_progressbar_v3//:progressbar",
    ],
)

go_library(
    name = "odict",
    srcs = [
        "dictionary.go",
        "doc.go",
        "dump.go",
        "entry.go",
        "etymology.go",
        "group.go",
        "index.go",
        "merge.go",
        "pos.go",
        "read.go",
        "search.go",
        "usage.go",
        "utils.go",
        "write.go",
    ],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "//schema/go",
        "@com_github_blevesearch_bleve_index_api//:bleve_index_api",
        "@com_github_blevesearch_bleve_v2//:bleve",
        "@com_github_blevesearch_bleve_v2//document",
        "@com_github_blevesearch_bleve_v2//index/scorch",
        "@com_github_blevesearch_bleve_v2//search/query",
        "@com_github_golang_snappy//:snappy",
        "@com_github_google_flatbuffers//go:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@com_github_imdario_mergo//:mergo",
        "@com_github_schollz_progressbar_v3//:progressbar",
    ],
)
