[package]
name = "odict"
description = "A blazingly-fast dictionary file format for human languages"
homepage = "https://odict.org"
repository = "https://github.com/TheOpenDictionary/odict"
version = "2.9.1"
edition = "2021"
license = "MIT"
exclude = ["benches/*", "tests/*"]

[features]
sql = ["dep:sea-query"]
config = ["dep:dirs"]
js = ["uuid/js"]
html = ["markdown"]
search = ["dep:tantivy", "config"]
markdown = ["dep:pulldown-cmark"]
default = ["sql", "config"]

# Language-specific support
charabia = ["dep:charabia"]
tokenize = [
  "tokenize-latin",
  "tokenize-chinese",
  "tokenize-japanese",
  "tokenize-thai",
  "tokenize-korean",
  "tokenize-khmer",
  "tokenize-swedish",
  "tokenize-german",
]
tokenize-latin = ["dep:charabia"]
tokenize-chinese = ["tokenize-latin", "charabia/chinese-segmentation"]
tokenize-japanese = ["tokenize-latin", "charabia/japanese-segmentation-unidic"]
tokenize-thai = ["tokenize-latin", "charabia/thai"]
tokenize-korean = ["tokenize-latin", "charabia/korean"]
tokenize-khmer = ["tokenize-latin", "charabia/khmer"]
tokenize-swedish = ["tokenize-latin", "charabia/swedish-recomposition"]
tokenize-german = ["tokenize-latin", "charabia/german-segmentation"]

[[bench]]
name = "lib"
harness = false

[dependencies]
byteorder = "1.5.0"
quick-xml = { version = "0.38.1", features = ["serialize"] }
rayon = "1.11.0"
charabia = { version = "0.9.6", optional = true, default-features = false }
rkyv = { version = "0.8.11" }
serde = { version = "1.0.219", features = ["serde_derive"] }
uuid = { version = "1.18.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
url = "2.5.4"
serde_json = "1.0.142"
thiserror = "2.0.14"
brotli = "8.0.1"
structural-convert = { workspace = true }

# feature=markdown
pulldown-cmark = { version = "0.13.0", optional = true }
# feature=search
tantivy = { version = "0.25.0", optional = true }
# feature=config
dirs = { version = "6.0.0", optional = true }
# feature=sql
sea-query = { version = "0.32.7", optional = true }
strum = { version = "0.27.2", features = ["derive"] }

[dev-dependencies]
insta = "1.43.1"
map-macro = { version = "0.3.0" }
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.20.0"
regex = "1.11.1"

[lib]
name = "odict"
crate-type = ["cdylib", "staticlib", "lib"]
