[package]
edition = "2021"
name = "odict_node"
version = "1.1.1"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["search", "sql", "tokenize", "load"]
load = ["odict/download", "odict/alias"]
tokenize = [
  "odict/tokenize-latin",
  "odict/tokenize-chinese",
  "odict/tokenize-thai",
  "odict/tokenize-khmer",
  "odict/tokenize-swedish",
  "odict/tokenize-german",
]
sql = ["odict/sql"]
search = ["odict/search"]

[dependencies]
merge = "0.2.0"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3", default-features = false, features = [
  "async",
  "napi4",
] }
napi-derive = "3"
odict = { path = "../lib" }
structural-convert = { workspace = true }
internal = { path = "../internal" }

[build-dependencies]
napi-build = "2"
