[package]
edition = "2021"
name = "odict_node"
publish = false
version = "1.1.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
node = ["odict/http", "odict/alias", "odict/search"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
internal = { path = "../crates/internal" }
napi = { version = "3", default-features = false, features = ["async", "napi4"] }
napi-derive = "3"
odict = { path = "../crates/odict", features = ["tokenize", "sql"] }
structural-convert = { workspace = true }

[build-dependencies]
napi-build = "2"
