load("@rules_python//python:defs.bzl", "py_library", "py_test")

alias(
    name = "python",
    actual = "odict",
    visibility = ["//visibility:public"],
)

py_library(
    name = "odict",
    srcs = [
        "odict.py",
    ],
    data = [
        "//bridge:shared",
    ],
)

py_test(
    name = "tests",
    srcs = ["odict_tests.py"],
    data = ["//examples"],
    main = "odict_tests.py",
    deps = [":odict"],
)
