[package]
name = "odict_python"
version = "2.1.1"
edition = "2021"

[lib]
name = "theopendictionary"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["either"] }
pyo3-async-runtimes = { version = "0.26.0", features = [
  "tokio-runtime",
  "attributes",
] }
odict = { path = "../lib", features = [
  "config",
  "sql",
  "http",
  "alias",
  "tokenize",
  "search",
] }
internal = { path = "../internal" }
either = { version = "*" }
structural-convert = { workspace = true }
tokio = { version = "1.48", features = ["full"] }
