[package]
name = "odict_python"
version = "2.2.1"
edition = "2021"

[lib]
name = "theopendictionary"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["either"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime", "attributes"] }
odict = { path = "../crates/odict", features = [
  "config",
  "sql",
  "http",
  "alias",
  "tokenize",
  "search",
] }
internal = { path = "../crates/internal" }
either = { version = "*" }
structural-convert = { workspace = true }
tokio = { version = "1.52", features = ["full"] }
