[package]
edition = "2021"
name = "odict_python"
version = "2.3.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "theopendictionary"

[dependencies]
either = { version = "*" }
internal = { path = "../crates/internal" }
odict = { path = "../crates/odict", features = [
  "config",
  "sql",
  "http",
  "alias",
  "tokenize",
  "search",
] }
pyo3 = { version = "0.29.0", features = ["either"] }
pyo3-async-runtimes = { version = "0.29.0", features = ["tokio-runtime", "attributes"] }
structural-convert = { workspace = true }
tokio = { version = "1.52", features = ["full"] }
