[tool.poetry]
name = "theopendictionary"
version = "0.7.0"
description = ""
authors = ["Tyler Nickerson <nickersoft@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^23.0.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/legacy/"