load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "schema",
    srcs = [
        "schema_generated.go",
        "schema_generated.h",
    ],
    importpath = "github.com/odict/odict/schema",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_flatbuffers//go"],
)
