filegroup(
    name = "file",
    srcs = ["schema.fbs"],
    visibility = ["//schema:__subpackages__"],
)

alias(
    name = "schema",
    actual = "//schema/go",
    visibility = ["//visibility:public"],
)

alias(
    name = "go",
    actual = ":schema",
    visibility = ["//visibility:public"],
)

alias(
    name = "java",
    actual = "//schema/java",
    visibility = ["//visibility:public"],
)
