load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "shared_lib",
    srcs = ["odict.go"],
    importpath = "github.com/odict/odict/shared",
    visibility = ["//visibility:private"],
    deps = ["//go"],
)

go_binary(
    name = "shared",
    cgo = True,
    embed = [":shared_lib"],
    linkmode = "c-shared",
    visibility = ["//visibility:public"],
)
