[package]
name = "odict-wasm"
version = "0.1.0"
authors = ["Tyler Nickerson"]
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
odict = { path = "../lib", features = ["js", "json"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.140"
merge = "0.1.0"
web-sys = "0.3.77"
serde-wasm-bindgen.workspace = true
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
