[package]
name = "pyodict"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyodict"
crate-type = ["cdylib"]

[dependencies]
uniffi.workspace = true
odict = { path = "../../lib", features = [
  "config",
  "charabia",
  "sql",
  "search",
  "json",
  "uniffi",
] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
