[package]
name = "python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python"
crate-type = ["cdylib"]

[dependencies]
uniffi = "0.28.0"
odict = { path = "../../lib", features = [
  "config",
  "charabia",
  "sql",
  "search",
  "json",
  "uniffi",
] }

[build-dependencies]
uniffi = { version = "0.28.0", features = ["build"] }
