[package]
name = "pyodict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyodict"
crate-type = ["cdylib"]

[dependencies]
uniffi.workspace = true
odict = { path = "../../lib", features = [
  "config",
  "sql",
  "search",
  "json",
  "uniffi",
] }

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
