load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@com_github_google_flatbuffers//:build_defs.bzl", "flatbuffer_library_public")

flatbuffer_library_public(
    name = "go_srcs",
    srcs = ["//schema:file"],
    outs = ["schema_generated.go"],
    flatc_args = [
        "--gen-onefile",
        "--go-namespace schema",
    ],
    language_flag = "-g",
)

# gazelle:ignore
go_library(
    name = "go",
    srcs = ["schema_generated.go"],
    importpath = "github.com/TheOpenDictionary/odict/schema/go",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_flatbuffers//go"],
)
